Fixed header jumping

--- a/main.css
+++ b/main.css
@@ -112,8 +112,6 @@ h3 {
 	display: inline-block;
 	z-index: -10;
 	width: 160px;
-	min-height: 200px;
-	max-height: 200px;
 	padding: 15px 15px;
 	margin:0 10px 30px;
 	border: 1px solid #e8e8e8;
@@ -147,6 +145,7 @@ h3 {
 }
 .headings {
 	max-width: 800px;
+	height: 200px;
 	margin: 0 auto;
 }
 .footer {
